test_programs/compile_failure/regression_10365/src/main.nr
global foo: Quoted = quote { 1};

fn main() {
    let _ = foo;
}
